<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizonGloss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/viewItemGloss"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLineGloss" />

    <View
        android:id="@+id/viewLineGloss"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_16"
        android:background="@color/color_athens_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageGlossPlayed"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_24"
        android:src="@drawable/ic_assist"
        app:layout_constraintBottom_toTopOf="@+id/imageGlossGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewItemGloss" />

    <ImageView
        android:id="@+id/imageGlossGoal"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:src="@drawable/ic_goal"
        app:layout_constraintBottom_toBottomOf="@+id/viewItemGloss"
        app:layout_constraintStart_toStartOf="@id/imageGlossPlayed"
        app:layout_constraintTop_toBottomOf="@+id/imageGlossPlayed" />

    <TextView
        android:id="@+id/textGlossPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/text_gloss_match_played"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/imageGlossPlayed"
        app:layout_constraintStart_toEndOf="@+id/imageGlossPlayed"
        app:layout_constraintTop_toTopOf="@+id/imageGlossPlayed" />

    <TextView
        android:id="@+id/textGlossGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_gloss_goal"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/imageGlossGoal"
        app:layout_constraintStart_toStartOf="@+id/textGlossPlayed"
        app:layout_constraintTop_toTopOf="@+id/imageGlossGoal" />

    <ImageView
        android:id="@+id/imageGlossYellowCard"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_32"
        android:src="@drawable/ic_yellowcard"
        app:layout_constraintBottom_toTopOf="@+id/imageGlossRedCard"
        app:layout_constraintStart_toStartOf="@+id/guidelineHorizonGloss"
        app:layout_constraintTop_toTopOf="@+id/viewItemGloss" />

    <ImageView
        android:id="@+id/imageGlossRedCard"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:src="@drawable/ic_redcard"
        app:layout_constraintBottom_toBottomOf="@+id/viewItemGloss"
        app:layout_constraintStart_toStartOf="@id/imageGlossYellowCard"
        app:layout_constraintTop_toBottomOf="@+id/imageGlossYellowCard" />

    <TextView
        android:id="@+id/textGlossYellowCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/text_gloss_yellow_card"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/imageGlossYellowCard"
        app:layout_constraintStart_toEndOf="@+id/imageGlossYellowCard"
        app:layout_constraintTop_toTopOf="@+id/imageGlossYellowCard" />

    <TextView
        android:id="@+id/textGlossRedCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_gloss_red_card"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/imageGlossRedCard"
        app:layout_constraintStart_toStartOf="@+id/textGlossYellowCard"
        app:layout_constraintTop_toTopOf="@+id/imageGlossRedCard" />
</androidx.constraintlayout.widget.ConstraintLayout>
