<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textTitleLineUp"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/title_main_lineup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLineUp"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_600"
            android:background="@drawable/background_pitch"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleLineUp" />

        <TextView
            android:id="@+id/textNameReferee"
            style="@style/TextLineUp"
            android:layout_marginStart="@dimen/dp_5"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="top"
            app:drawableStartCompat="@drawable/ic_referee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleLineUp" />

        <TextView
            android:id="@+id/textNameStadium"
            style="@style/TextLineUp"
            android:layout_marginEnd="@dimen/dp_5"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="top|end"
            app:drawableEndCompat="@drawable/ic_stadium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleLineUp" />

        <TextView
            android:id="@+id/textHomeGoalie"
            style="@style/TextLineUp"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameReferee" />

        <TextView
            android:id="@+id/textHomeRowOne"
            style="@style/TextLineUp"
            android:layout_marginTop="@dimen/dp_80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHomeGoalie" />

        <TextView
            android:id="@+id/textHomeRowTwo"
            style="@style/TextLineUp"
            android:layout_marginTop="@dimen/dp_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHomeRowOne" />

        <TextView
            android:id="@+id/textHomeRowThree"
            style="@style/TextLineUp"
            android:layout_marginTop="@dimen/dp_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHomeRowTwo" />

        <TextView
            android:id="@+id/textHomeRowFour"
            style="@style/TextLineUp"
            android:layout_marginTop="@dimen/dp_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHomeRowThree" />

        <TextView
            android:id="@+id/textAwayGoalie"
            style="@style/TextLineUp"
            android:layout_marginBottom="@dimen/dp_30"
            app:layout_constraintBottom_toBottomOf="@+id/imageLineUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAwayRowOne"
            style="@style/TextLineUp"
            android:layout_marginBottom="@dimen/dp_80"
            app:layout_constraintBottom_toTopOf="@+id/textAwayGoalie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAwayRowTwo"
            style="@style/TextLineUp"
            android:layout_marginBottom="@dimen/dp_28"
            app:layout_constraintBottom_toTopOf="@+id/textAwayRowOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAwayRowThree"
            style="@style/TextLineUp"
            android:layout_marginBottom="@dimen/dp_28"
            app:layout_constraintBottom_toTopOf="@+id/textAwayRowTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAwayRowFour"
            style="@style/TextLineUp"
            android:layout_marginBottom="@dimen/dp_28"
            app:layout_constraintBottom_toTopOf="@+id/textAwayRowThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textTitleReserve"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/title_reserve"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLineUp" />

        <View
            android:id="@+id/viewVertical"
            android:layout_width="@dimen/dp_1"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleReserve" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerReserve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleReserve"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/item_recyclerview_line_up" />

        <TextView
            android:id="@+id/textTitleCoach"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/title_coach"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerReserve" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCoach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleCoach"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/item_recyclerview_line_up" />

        <TextView
            android:id="@+id/textTitlePlayerAbsent"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/title_player_absent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerCoach" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMissing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitlePlayerAbsent"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/item_recyclerview_line_up" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
